--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   whoami:
     image: jwilder/whoami
+    network_mode: bridge
     environment:
       - VIRTUAL_HOST=text.hiqbattery.cn
 
